Finalized XML sector parser.